feat(i18n): enhance user module translations for English, Spanish, and French

--- a/frontend/src/locales/en/modules/users.json
+++ b/frontend/src/locales/en/modules/users.json
@@ -1,1 +1,23 @@
-{"title": "Users", "add_user": "Add User", "user_profile": "User Profile"}
+{
+  "title": "Users",
+  "add_user": "Add User",
+  "user_profile": "User Profile",
+  "create_user": "Create User",
+  "edit_user": "Edit User",
+  "create_user_subtitle": "Add a new user to the system",
+  "edit_user_subtitle": "Update user information and permissions",
+  "basic_information": "Basic Information",
+  "role_access": "Role & Access",
+  "contact_information": "Contact Information",
+  "security": "Security",
+  "full_name": "Full Name",
+  "email_address": "Email Address",
+  "role": "Role",
+  "department": "Department",
+  "phone_number": "Phone Number",
+  "password": "Password",
+  "confirm_password": "Confirm Password",
+  "cancel": "Cancel",
+  "create": "Create User",
+  "update": "Update User"
+}
